testdata/formatter/failing/leadingCommentGroups.go
package main

// comment

// comment

import "A"

// comment
type x a

// comment
var a int = 1

// comment
const a = iota

// comment
func a() {}

// comment
func (p *int) Length() {}
